--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 wasm-bindgen = "0.2"
 
+# Optimize for small code size:
+[profile.dev]
+opt-level = "s"
+
 [profile.release]
-# Tell `rustc` to optimize for small code size.
 opt-level = "s"
