--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+rand = { version="0.6", features = ['wasm-bindgen'] }
 wasm-bindgen = "0.2"
+web-sys = { version = "0.3.5", features = ['console'] }
 
 # Optimize for small code size:
 [profile.dev]
