--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 rand = { version="0.6", features = ['wasm-bindgen'] }
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3.5", features = ['console'] }
+web-sys = { version = "0.3.5", features = ['console', 'Performance', 'Window'] }
 
 # Optimize for small code size:
 [profile.dev]
