--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 rand = { version="0.6", features = ['wasm-bindgen'] }
 serde = "1"
+serde_derive = "1"
 serde_json = "1"
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = ['console', 'Performance', 'Window'] }
 
 emigui = { git = "https://github.com/emilk/emigui" }
 emigui_wasm = { git = "https://github.com/emilk/emigui" }
