--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,10 @@ serde_derive = "1"
 serde_json = "1"
 wasm-bindgen = "0.2"
 
-emigui = { git = "https://github.com/emilk/emigui" }
-emigui_wasm = { git = "https://github.com/emilk/emigui" }
+egui = { git = "https://github.com/emilk/emigui" }
+egui_web = { git = "https://github.com/emilk/emigui" }
+# egui = { path = "../emigui/egui" }
+# egui_web = { path = "../emigui/egui_web" }
 
 # Optimize for small code size:
 [profile.dev]
