--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-rand = { version="0.6", features = ['wasm-bindgen'] }
+rand = { version = "0.7", features = ['small_rng', 'wasm-bindgen'] }
 serde = "1"
 serde_derive = "1"
 serde_json = "1"
