--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ serde_derive = "1"
 serde_json = "1"
 wasm-bindgen = "0.2"
 
-egui = { git = "https://github.com/emilk/emigui" }
-egui_web = { git = "https://github.com/emilk/emigui" }
+egui = "0.1.3"
+egui_web = "0.1.3"
 # egui = { path = "../emigui/egui" }
 # egui_web = { path = "../emigui/egui_web" }
 
