--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ serde_derive = "1"
 serde_json = "1"
 wasm-bindgen = "0.2"
 
-egui = "0.1.3"
-egui_web = "0.1.3"
-# egui = { path = "../emigui/egui" }
-# egui_web = { path = "../emigui/egui_web" }
+egui = "0.2.0"
+egui_web = "0.2.0"
+# egui = { path = "../egui/egui" }
+# egui_web = { path = "../egui/egui_web" }
 
 # Optimize for small code size:
 [profile.release]
